Individual missed call notifications per conversation

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -916,6 +916,8 @@
     <string name="outgoing_call">Outgoing call</string>
     <string name="outgoing_call_duration">Outgoing call · %s</string>
     <string name="missed_call">Missed call</string>
+    <string name="missed_call_from_x">Missed call from %s</string>
+    <string name="n_missed_calls_from_x">%1$d missed calls from %2$s</string>
     <string name="n_missed_calls">%d missed calls</string>
     <string name="n_missed_calls_from_m_contacts">%1$d missed calls from %2$d contacts</string>
     <string name="audio_call">Audio call</string>
